fix homepage image not showing

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -42,7 +42,7 @@
 
 .homepage {
 	height: 655px;
-	background-image: url(/assets/sea1.jpg);
+	background-image: image-url("sea1.jpg");
 	background-size: 120%;
 	background-position: left center;
 	background-repeat: no-repeat;
